# cluaiz-cpu

./: .gitattributes  .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh  package-lock.json  package.json  payload.json
Inference-engine/api/: Cargo.toml  README.md
Inference-engine/api/src/: README.md  ffi_bridge.rs  lib.rs  routes.rs  state.rs
Inference-engine/api/src/handlers/: README.md  benchmark.rs  booster.rs  cel_handler.rs  chat.rs  components.rs  extensions.rs  ingest.rs  mcp.rs  mod.rs  models.rs  permission.rs  plugins.rs  ps.rs  setup.rs  skills.rs  system.rs
Inference-engine/engines/: Cargo.toml  README.md
Inference-engine/engines/.cargo/: config.toml
Inference-engine/engines/cluaiz-shared/: Cargo.toml  Reaadme.md  errors.txt
Inference-engine/engines/cluaiz-shared/src/: lib.rs
Inference-engine/engines/cluaiz-shared/src/backend/: context.rs  signature.rs  traits.rs
Inference-engine/engines/cluaiz-shared/src/environment/: mod.rs
Inference-engine/engines/cluaiz-shared/src/hardware/: governor.rs  (+4 more)
Inference-engine/engines/scratch/: metadata_scan.rs
Inference-engine/engines/src/: README.md  lib.rs
Inference-engine/engines/src/api/: README.md  router.rs  server.rs
Inference-engine/engines/src/cli/: README.md
Inference-engine/engines/src/hardware/: README.md  mod.rs  models_runner.rs  system_control_manager.rs
Inference-engine/engines/src/interface-engines/: README.md
Inference-engine/engines/src/memory/: README.md  embedding_generator.rs  kv_injector.rs  mod.rs  storage_bridge.rs  transit.rs
Inference-engine/engines/src/models/: README.md  entities.rs  mod.rs
Inference-engine/engines/src/neural_foundry/: README.md  mod.rs
Inference-engine/engines/src/platform/: README.md
Inference-engine/engines/src/runtime/: README.md  mod.rs  wasm_host.rs
Inference-engine/engines/src/sync/: README.md  mod.rs
Inference-engine/engines/src/telemetry/: README.md  health_check.rs  sentinel.rs
Inference-engine/engines/src/utils/: README.md  healer.rs  mod.rs  performance.rs
Inference-engine/engines/system-booster/: README.md
Inference-engine/engines/system-booster/src/: lib.rs  system_booster.rs
Inference-engine/engines/tests/: kernel_stress_test.rs  semantic_routing_test.rs
cmd/: Cargo.toml  ReadMe.md  build.rs
cmd/assets/: commands.json
cmd/src/: README.md  main.rs  theme.rs
cmd/src/assets/: THIRD_PARTY_NOTICES.txt  branding.rs
cmd/src/cli/: benchmark.rs  booster.rs  component.rs  config_cmd.rs  help.rs  ingest.rs  list.rs  mod.rs  ps.rs  pull.rs  rm.rs  run.rs  setup.rs  test_jit.rs
cmd/src/core/: app.rs  bootstrapper.rs  dashboard.rs  flow.rs  mod.rs  state.rs
cmd/src/core/commands/: mod.rs  registry.rs
cmd/src/ui/: menu.rs  mod.rs
cmd/src/ui/apps/: mod.rs
cmd/src/ui/components/: text_paste.rs
inference-cel/: Cargo.toml  README.md
inference-cel/src/: lib.rs
inference-cel/src/execution/: activation_bus.rs  auto_wasm_compiler.rs  legacy_rhai.rs  memory_hooks.rs  mod.rs  native_sandbox.rs  process_sandbox.rs  registry.rs  registry_index.rs  safety_checker.rs  wasm_sandbox.rs
inference-cel/src/ffi/: cxp_ffi.rs  mod.rs
inference-cel/src/parser/: ast.rs  eval.rs  lexer.rs  metadata_parser.rs  mod.rs  planner.rs
inference-cel/src/vram/: gpu_injector.rs  mod.rs
interface-engines/dispatcher/: Cargo.toml  README.md
interface-engines/dispatcher/src/: lib.rs
interface-engines/neural_core/: Cargo.toml  README.md
interface-engines/neural_core/src/interfaces/: mod.rs  router_contract.rs
interface-engines/neural_core/src/state_steering/: kv_steering.rs
interface-engines/onnx/: Cargo.toml  README.md
interface-engines/onnx/src/: audio.rs  chat.rs  engine.rs  lib.rs  text.rs  vision.rs
realses/cluaiz-cli-dev-release/cluaiz-engine/engines/: Cargo.toml  booster_build.ps1  build.rs
realses/cluaiz-cli-dev-release/interface-engines/candle/: Cargo.toml  build.rs
realses/cluaiz-driver-dev-release/brain/storage/: Cargo.toml
realses/cluaiz-driver-dev-release/cluaiz-engine/api/: Cargo.toml
realses/cluaiz-driver-dev-release/inference-drivers/: Cargo.toml
realses/cluaiz-driver-dev-release/inference-drivers/src/: lib.rs
realses/cluaiz-driver-dev-release/interface-engines/dispatcher/: Cargo.toml
realses/cluaiz-engine-dev-release/: Cargo.toml  LICENSE  README.md  thing.ai.nurale.md
realses/cluaiz-engine-dev-release/.github/workflows/: inference-driver.yml  inference-kernel.yml  skills.yml
realses/cluaiz-engine-dev-release/Apps/cli/: Cargo.toml  ReadMe.md  build_errors.txt
realses/cluaiz-engine-dev-release/cluaiz-engine/engines/: build.rs
realses/cluaiz-engine-dev-release/cluaiz-engine/shared/: Cargo.toml
realses/cluaiz-engine-dev-release/inference-drivers/: README.md
realses/cluaiz-engine-dev-release/interface-engines/global_runtime/: Cargo.toml
realses/cluaiz-engine-dev-release/interface-engines/neural_core/: Cargo.toml
realses/cluaiz-engine-dev-release/interface-engines/utils/: Cargo.toml
realses/cluaiz-engine-dev-release/skills/: README.md  other-skills-vs-clauiz-skils.md
realses/cluaiz-engine-dev-release/skills/doc/: comprehensive_skill_blueprint.txt
realses/cluaiz-engine-dev-release/skills/spec-first/: README.md
test/ai_search_e2e_test/: Cargo.toml  README.md
test/ai_search_e2e_test/output/: ai_search_e2e_out.json  real_test_output.json  single_pass_e2e_out.json
test/ai_search_e2e_test/src/: main.rs  real_routing_test.rs  single_pass_e2e.rs
test/comprehensive_e2e_trace/: Cargo.toml
test/comprehensive_e2e_trace/output/: comprehensive_trace.json
test/comprehensive_e2e_trace/src/: main.rs
test/engine_cel_test/: Cargo.toml  README.md
test/engine_cel_test/output/: cel_test_out.json  ffi_test_out.json  http_test_out.json
test/engine_cel_test/src/: main.rs
test/extension_testing/: Cargo.toml
test/extension_testing/src/: main.rs
test/integration/: Cargo.toml  benchmark_output copy.jsonl  benchmark_output.jsonl
test/integration/tests/: cel_ffi_integration.rs  chat_tests.rs  db_tests.rs  skills_tests.rs  system_tests.rs  test_thinking_json.rs
(+790 files in other folders)
