[package]
name = "inference-cel"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
wasmtime = "45.0.1"
dashmap = "6.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.5.0"
tracing = "0.1.44"
anyhow = "1.0.102"
bincode = "1.3.3"
libloading = "0.8"
uuid = { version = "1.23.4", features = ["v4"] }
serde_yaml = "0.9.34"
rhai = "1.25.1"
sha2 = "0.10"

[[test]]
name = "cel_quality_mechanics"
path = "../test/quality/cel_quality_mechanics.rs"

