[package]
name = "cluaiz_api"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
engines = { path = "../engines" }
dispatcher = { path = "../../interface-engines/dispatcher", package = "dispatcher-crate" }
system-booster = { path = "../engines/system-booster" }
cluaiz-shared = { path = "../engines/cluaiz-shared" }
inference-cel = { path = "../../inference-cel" }

# ── Web Server (The Gateway) ──
axum       = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tokio      = { version = "1", features = ["full"] }

# ── Data Serialization ──
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

# ── Logging & Terminal ──
tracing            = "0.1"
tracing-subscriber = "0.3"
colored            = "2.1"
sysinfo            = "0.33"
dirs = "5.0"
futures = "0.3"
async-stream = "0.3"
serde_yaml = "0.9.34"
