[package]
name = "engines"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]



[[bin]]
name = "test_inference"
path = "src/bin/test_inference.rs"

[[bin]]
name = "test_bridge"
path = "src/bin/test_bridge.rs"

[dependencies]
# ── Async & Web ──
tokio   = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "blocking"] }
futures-util = "0.3"
dirs = "5"

# ── System Hardware Info ──
sysinfo = "0.30"
sys-locale = "0.3"

# ── Serialization ──
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Logging ──
tracing = "0.1.44"

# ──  Unified Core ──
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"

# ── Shared Workspace Member Links ──
cluaiz-shared = { path = "cluaiz-shared" }
inference-cel = { path = "../../inference-cel" }
# Engines (Llama, Candle, BitNet) are now loaded dynamically via libloading from interface-engines
system-booster = { path = "system-booster", optional = true }
neural_core = { package = "neural-core", path = "../../interface-engines/neural_core" }

# ── Dynamic Neural Bridge (The Soul Linker) ──
libloading = "0.8"
cluaiz_onnx = { package = "onnx", path = "../../interface-engines/onnx" }
# We no longer statically link to engine-lmdb or cluaizdb-types
# The Core Engine is now a Dumb Router that dynamically loads cluaizdb_engine.dll

# ── Common Utilities (Used by All) ──
tokenizers          = { version = "0.22.2", default-features = false, features = ["onig"] }
once_cell           = "1.19"
anyhow              = "1.0.102"
chrono              = { version = "0.4", features = ["serde"] }
rayon               = "1.10"
dashmap             = "6.1"
rand                = "0.9"
memmap2             = "0.9"
zip                 = "2.2"
wasmtime          = { version = "45.0.1", optional = true }
wasmtime-wasi       = { version = "45.0.1", optional = true }
async-trait         = "0.1"
indicatif = "0.18.4"
colored = "3.1"
pdf-extract = "0.7"
serde_yaml = "0.9.34"
lazy_static = "1.5.0"
bincode = "1.3.3"
safetensors = "0.8.0"


[build-dependencies]
cc = "1.2.59"

[features]
default = ["system-booster", "wasm-runtime"]
wasm-runtime = ["dep:wasmtime", "dep:wasmtime-wasi"]
system-booster = ["dep:system-booster"]
