[package]
name = "neural-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Future-proof dependencies for TTT/JEPA/Liquid
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
cluaiz-shared = { path = "../../Inference-engine/engines/cluaiz-shared" }
memmap2 = "0.9"
tracing = "0.1"
thiserror = "1.0"
