[package]
name = "ai_search_e2e_test"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
reqwest = { version = "0.13.4", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
futures-util = "0.3.30"
cluaiz-search = { path = "../../../cluaiz-hub/extensions/cluaiz-search" }

[[bin]]
name = "real_routing_test"
path = "src/real_routing_test.rs"

[[bin]]
name = "single_pass_e2e"
path = "src/single_pass_e2e.rs"
