[package]
name = "engine_cel_test"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
engines = { path = "../../Inference-engine/engines" }
inference-cel = { path = "../../inference-cel" }
