[package]
name = "extension_testing"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
