[workspace]

[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
cluaiz-shared = { path = "../../Inference-engine/engines/cluaiz-shared" }
engines = { path = "../../Inference-engine/engines" }
dirs = "5.0"
