[package]
name = "driver-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# ── Async & Web ──
tokio   = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# ── Hardware & OS ──
sysinfo = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1.41"
anyhow = "1"
libloading = "0.8"

# ── Internal Link ──
archer-shared = { path = "../cluaiz-engine/engines/archer-shared" }
