[package]
name = "engines"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[[bin]]
name = "calibrate"
path = "src/bin/calibrate.rs"

[dependencies]
# ── Async & Web ──
tokio   = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
dirs = "5"

# ── System Hardware Info ──
sysinfo = "0.30"
sys-locale = "0.3"

# ── Serialization ──
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Logging ──
tracing = "0.1.44"

# ── CURE Unified Core ──
uuid = { version = "1", features = ["v4"] }

# ── Shared Workspace Member Links ──
cluaiz-shared = { path = "cluaiz-shared" }
# Engines (Llama, Candle, BitNet) are now loaded dynamically via libloading from interface-engines
system-booster = { path = "system-booster", optional = true }
neural-core = { path = "../../interface-engines/neural_core" }

# ── Dynamic Neural Bridge (The Soul Linker) ──
libloading = "0.8"
candle-core = { git = "https://github.com/huggingface/candle.git" }
candle-nn = { git = "https://github.com/huggingface/candle.git" }

# ── Common Utilities (Used by All) ──
tokenizers          = "0.22.2"
once_cell           = "1.19"
anyhow              = "1.0.102"
chrono              = { version = "0.4", features = ["serde"] }
rayon               = "1.10"
dashmap             = "6.1"
rand                = "0.9"
memmap2             = "0.9"
zip                 = "2.2"
wasmtime            = { version = "29.0", optional = true }
wasmtime-wasi       = { version = "29.0", optional = true }
async-trait         = "0.1"
indicatif = "0.18.4"
colored = "3.1"


[build-dependencies]
cc = "1.2.59"

[features]
default = ["system-booster", "wasm-runtime"]
wasm-runtime = ["dep:wasmtime", "dep:wasmtime-wasi"]
system-booster = ["dep:system-booster"]
