[package]
name = "storage"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# ── Async Runtime ──
tokio = { version = "1", features = ["process", "time", "sync", "net", "full"] }

# ── Serialization (for DB configs) ──
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Logging ──
tracing = "0.1"
surrealdb = { version = "3.0.5", features = ["kv-surrealkv"] }
lancedb = "0.27.2"
duckdb = { version = "1.10501.0", features = ["bundled"] }
