[package]
name = "api"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# ── CURE Internal Crates ──
storage = { path = "../../brain/storage" }
engines = { path = "../engines" }
dispatcher = { path = "../../interface-engines/dispatcher", package = "dispatcher-crate" }
system-booster = { path = "../engines/system-booster" }
cluaiz-shared = { path = "../engines/cluaiz-shared" }

# ── Web Server (The Gateway) ──
axum       = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tokio      = { version = "1", features = ["full"] }

# ── Data Serialization ──
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

# ── Logging & Terminal ──
tracing            = "0.1"
tracing-subscriber = "0.3"
colored            = "2.1"
sysinfo            = "0.33"
