[package]
name = "system-booster"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing    = "0.1"
anyhow     = "1.0"
rkyv       = { version = "0.7", features = ["validation", "bytecheck"] }
dirs       = "5.0"

# ── Shared Workspace Member Links ──
cluaiz-shared = { path = "../cluaiz-shared" }
