[package]
name = "cluaiz-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# ── Core Neural Types (Universal) ──
tokenizers = { version = "0.22.2", features = ["onig"] }



# ── Serialization ──
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ── System Hardware ──
sysinfo = "0.30"
once_cell = "1.19"

# ── Logic & Error Handling ──
anyhow = "1.0"
tracing-subscriber = "0.3.19"
tracing = "0.1.44"
strum = { version = "0.26", features = ["derive"] }
minijinja = { version = "2", features = ["loader"] }
memmap2 = "0.9"
libloading = "0.8"
rkyv = { version = "0.7", features = ["validation", "strict"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
raw-cpuid = "11.6.0"
nvml-wrapper = "0.12.1"
